# gravity-assist-flyby-optimizer

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.in  setup.py
flyby/cpp_models/: celestial_body.cpp  celestial_body.h  celestial_body.hpp  ephemeris_wrapper.cpp  ephemeris_wrapper.hpp  makefile  test_ephemeris.cpp
flyby/demos/: solar_sys_animation.py
flyby/math_utilities/: fast_linear_interpolator.py
flyby/orbit_models/: ecliptic_frame.py  keplerian_orbit.py
flyby/simulation/: simulation.py
flyby/solar_system_model/: assure_ephermeris.py  celestial_body.py  cpp_ephemeris.py  jpl_ephemeris.py  read_jpl_ephemeris.py  relational_tree.py
flyby/spacecraft_model/: gravity.py  spacecraft.py
flyby/time_model/: julian_day.py
flyby/visualizations/: solar_system_plot.py
flyby/visualizers/: solar_system_plot.py  trajectory_plotter.py
notes/: coordinate_systems.md  solar_system_bodies.md
src/flyby/solar_system_model/: celestial_body.py  read_jpl_ephemeris.py  relational_tree.py
src/flyby/time_model/: julian_day.py
tests/: test_keplerian_orbit.py  test_solar_system_model.py  test_time_model.py
